--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,7 @@
     "m_current = 0\n",
     "\n",
     "#amount to update our variables for our next step\n",
-    "update_to_b = 0\n",
+    "update_to_b = \n",
     "update_to_m = 0 \n",
     "\n",
     "def error_at(point, b, m):\n",
